[FIX] web: set pointer events none for ribbon
Backport of commit odoo/odoo/commit/f83fef67a8755dad2f8af4a6b103dc674b750cd1

Before this commit, in a kanban view, when you have a ribbon on a card, it can be
too big and cover the "Load more..." button, making it unusable.
When this is clicked, it is the record with the ribbon that is too large
that is opened.

How to reproduce:
- In the CRM app, have more than 80 opportunities assigned to the same sales person.
- Mark them all as lost. Use any reason.
- Then, in the kanban view, clear the search bar, group by sales person, and filter on "Lost".
- There should be enough opportunities in the same column that there's a "Load more" link at the bottom.
- Click the "Load more" link.

Before this commit:
- The last opportunity in the column is opened in the form view.

After this commit:
- The remaining opportunities are loaded into the column.

opw-3616445

closes odoo/odoo#146022

X-original-commit: 453dea636f0466bde14ba318c196314553bae90c

--- a/addons/web/static/src/legacy/scss/ribbon.scss
+++ b/addons/web/static/src/legacy/scss/ribbon.scss
@@ -39,6 +39,7 @@
     &-top-right {
         margin-top: -$o-sheet-vpadding;
         right: 0;
+        pointer-events: none;
 
         &::before, &::after {
             border-top-color: black;
